add the prototype testing framework for integration tests
Signed-off-by: Igor Konnov <igor@konnov.phd>